fix: last bits of cleanup. Submission now
